# LLM-Tracing-Demo

./: .env.example  .gitignore  README.md  pyproject.toml
src/app/: __init__.py  config.py  main.py
src/app/services/: llm_service.py
